--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <title>Main</title>
 
     <style>
-        #container {
+        html {
             width: 100%;
         }
+        body {
+            margin: 0 auto;
+
+        }
+
+        .container {
+            width: 60%;
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+            background-color: #f2fdff;
+
+
+        }
+        nav {
+            padding-top: 30px;
+        }
+        .wrap {
+
+            height: 150px;
+            background-color: #f2fdff;
+        }
+            .menu {
+
+                padding-top: 15px;
+                background-color: white;
+                height: 50px;
+                border: dashed;
+            }
+
         .menublock1 {
             float: left;
         }
@@ -26,25 +57,39 @@
 </head>
 
 <body>
-<div id="container">
-    <div class="menu">
-        <div class="menublock1">
-           <img src="images/book.png" alt="logo" style="width:45px; height:56px;">
-        </div>
-        <div class="menublock2">
-            All about literature
-            <br>
-            Bookworm
-        </div>
+ <!-- container -->
+ <header>
+     <div class="wrap">
+<div class="container">
+    <!-- header -->
+            <nav> <!---- nav ---->
+                <div class="menu">
+                    <div class="menublock1">
+                       <img src="images/book.png" alt="logo" style="width:45px; height:56px;">
+                    </div>
+                    <div class="menublock2">
+                        All about literature
+                        <br>
+                        Bookworm
+                    </div>
+                </div>
+            </nav> <!-- end nav -->
+            <div>
+                <!-- slider -->
+            </div>
 
+    </div> <!-- end container -->
+     </div> <!-- end wrap -->
+    </header> <!-- end header -->
+    <!-- footer -->
+    <div class="footer">
     </div>
-<div class="navigation">
 
-</div>
-</div>
-<div class="footer">
 
-</div>
+
+
+
+
 
 </body>
 </html>
