add file and change index.html

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         }
         .popopularauthors {
             height: inherit;
+            float: left;
         }
     </style>
 </head>
@@ -295,6 +296,12 @@
     </div>
 </div>
 </div> <!-- end wrap -->
+
+ <div class="container">
+     <div class="literaturenews">
+         <img src="images/literaturenews.png" alt="" style="width: 1210px; height: ">
+     </div>
+ </div>
     <!-- footer -->
     <div class="footer">
     </div>
