--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             background-color: #f2fdff;
         }
             .menu {
-                box-shadow: 10px 10px 10px 5px #888888;
+                box-shadow: 0 0 10px rgba(0,0,0,0.5);
                 padding-top: 15px;
                 background-color: white;
                 height: 70px;
@@ -57,8 +57,8 @@
             margin-bottom: 60px;
         }
         .container p {
-            font-weight: 600;
-            font-size: bold;
+            font-weight: bold;
+            font-size: 40px;
             text-align: center;
         }
         .block1 {
@@ -129,6 +129,14 @@
         .popopularauthors {
             height: inherit;
             float: left;
+        }
+        .button {
+            text-align: center;
+        }
+        .discount {
+            background-image: url("images/books.png");
+            width: 1134px;
+            height: 908px;
         }
     </style>
 </head>
@@ -282,7 +290,7 @@
 
      </div>
  </div> <!-- end container -->
- <div class="clearfix"></div>
+
 
  <div class="container">
      <div class="button">
@@ -290,11 +298,11 @@
      </div>
  </div> <!-- end container -->
 <div class="wrap">
-<div class="container">
+
     <div class="popopularauthors">
         <img src="images/popularauthors.png" alt="pop" style="width: 1020px; height: 490px;">
     </div>
-</div>
+
 </div> <!-- end wrap -->
 
  <div class="container">
@@ -302,6 +310,20 @@
          <img src="images/literaturenews.png" alt="" style="width: 1210px; height: ">
      </div>
  </div>
+
+
+    <div class="comingsoon">
+        <img src="images/comingsoon.png" alt="" style="width: 1920px; height: 717px">
+    </div>
+
+ <div class="container">
+     <div class="discount">
+         <div class="infodiscount">
+             
+         </div>
+     </div>
+ </div>
+
     <!-- footer -->
     <div class="footer">
     </div>
