--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             width: 1134px;
             height: 908px;
         }
+        .literaturenews {
+
+        }
     </style>
 </head>
 
@@ -184,7 +187,7 @@
             <div class="menuimg">
                 <img src="images/Banner.png" alt="slider" style="height: 1080px; width: 1920px;">
             </div>
- 
+
  <div class="container">
          <div class="popular">
              <div class="picture1">
@@ -307,7 +310,7 @@
 
  <div class="container">
      <div class="literaturenews">
-         <img src="images/literaturenews.png" alt="" style="width: 1210px; height: ">
+         <img src="images/literaturenews.png" alt="" style="width: 1210px; height: 1256px; ">
      </div>
  </div>
 
@@ -319,7 +322,7 @@
  <div class="container">
      <div class="discount">
          <div class="infodiscount">
-             
+
          </div>
      </div>
  </div>
