--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
             height: 908px;
         }
         .literaturenews {
-
+            float: left;
+        }
+        .popularseries p {
+            text-align: center;
+        }
+        .popularseries ul li {
+            float: left;
         }
     </style>
 </head>
@@ -326,7 +332,23 @@
          </div>
      </div>
  </div>
+    <div class="content">
+        <div class="popularseries">
+        <p>Popular series</p>
+    </div>
+    </div>
+ <div class="container">
+     <ul>
+         <li><img src="images/bitmap.png" alt="" style="width: 160px; height: 249px;">
+         </li>
+         <li><img src="images/book14.png" alt="" style="width: 160px; height: 249px;"></li>
 
+         <li><img src="images/childrensliterature.png" alt="" style="width: 160px; height: 249px;"></li>
+         <li><img src="images/1.png" alt="" style="width: 160px; height: 249px;"></li>
+
+
+     </ul>
+ </div>
     <!-- footer -->
     <div class="footer">
     </div>
