--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="">
     <meta property="og:image" content="" />
     <title>Bookworm</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="block2">
                         <ul>
-                            <li><a href="BOOKS">BOOKS</a></li>
+                            <li><span class="fontmenu"><a href="BOOKS">BOOKS</a></span></li>
                             <li><a href="WRITERS">WRITERS</a></li>
                             <li><a href="PUBLISHERS">PUBLISHERS</a></li>
                             <li><a href="BLOG">BLOG</a></li>
