--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     <div class="block2">
                         <ul>
                             <li><span class="fontmenu"><a href="BOOKS">BOOKS</a></span></li>
-                            <li><a href="WRITERS">WRITERS</a></li>
-                            <li><a href="PUBLISHERS">PUBLISHERS</a></li>
-                            <li><a href="BLOG">BLOG</a></li>
-                            <li><a href="CONTACT">CONTACT</a></li>
+                            <li><span class="fontmenu"><a href="WRITERS">WRITERS</a></span></li>
+                            <li><span class="fontmenu"><a href="PUBLISHERS">PUBLISHERS</a></span></li>
+                            <li><span class="fontmenu"><a href="BLOG">BLOG</a></span></li>
+                            <li><span class="fontmenu"><a href="CONTACT">CONTACT</a></span></li>
                         </ul>
                     </div>
                     <div class="block3">
@@ -65,19 +65,20 @@
         <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
             Suspendisse nec tortor urna.
             Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>
-
+        <div><span class="font_yrsa">$100</span></div>
     </div>
+
 </div>
 
     <div class="container">
 
             <div class="presentation_book1">
-                <p> The Da Vinci Code </p>
-                <p> Dan Brown 5 * </p>
+                <p><span class="fontcaption"> The Da Vinci Code </span> </p>
+                <p> <span class="fontcaption_orange">Dan Brown</span><span class="font_vote"> 5 * </span></p>
                 <img src="img/bitmap.png" alt="Bitmap" style="width: 160px; height: 249px;">
             </div>
             <div class="presentation_book2">
-                <p>A major update in the Detective section</p>
+                <p><span class="fontcaption">A major update in the Detective section </span></p>
                 <img src="img/images.png" alt="Images" style="width: 180px; height: 272px;">
 
             </div>
@@ -85,24 +86,24 @@
 
 <div class="container">
     <div class="shopfronttext">
-        <p>Shopfront</p>
+        <p><span class="shopfront">Shopfront</span></p>
     </div>
 
     <nav>
         <div class="shopfrontmenu">
             <div class="shopfrontmenuleft">
                 <ul>
-                    <li><a href="All">All</a></li>
-                    <li><a href="Art & Photography">Art & Photography</a></li>
-                    <li><a href="">Audio books</a></li>
-                    <li><a href="">Biography</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Children Book</a></li>
+                    <li><span class="font_menu_shop"><a href="All">All</a></span></li>
+                    <li><span class="font_menu_shop"><a href="Art & Photography">Art & Photography</a></span></li>
+                    <li><span class="font_menu_shop"><a href="">Audio books</a></span></li>
+                    <li><span class="font_menu_shop"><a href="">Biography</a></span></li>
+                    <li><span class="font_menu_shop"><a href="">Business</a></span></li>
+                    <li><span class="font_menu_shop"><a href="">Children Book</a></span></li>
                 </ul>
             </div>
             <div class="shopfrontmenuright">
                 <ul>
-                    <li><a href="Popular">Popular</a></li>
+                    <li><span class="font_menu_shop"><a href="Popular">Popular</a></span></li>
                 </ul>
             </div>
         </div>
@@ -114,34 +115,33 @@
         <ul>
             <li>
                 <a href=""><img src="img/books/book1.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>Opaque Region </p>
-                <p>Carlos Fuentos</p>
+                <span class="books_font_grey"><p>Opaque Region </p></span>
+                <span class="books_font_orange"><p>Carlos Fuentos</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/2.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>The Meandering Corpsep </p>
-                    <p>Richard & Prather</p>
+                <span class="books_font_grey"><p>The Meandering Corpsep </p></span>
+                <span class="books_font_orange"><p>Richard & Prather</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/5.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>English Detective Stories </p>
-                     <p> Patricia Craig</p>
+                <span class="books_font_grey"><p>English Detective Stories </p></span>
+                <span class="books_font_orange"><p> Patricia Craig</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/3.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>Die Like a Dog</p>
-                <p> Brett Halliday</p>
+                <span class="books_font_grey"><p>Die Like a Dog</p></span>
+                <span class="books_font_orange"><p> Brett Halliday</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/6.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>1984 </p>
-                <p>George Orwell</p>
+                <span class="books_font_grey"><p></span><p>1984 </p></span>
+                <span class="books_font_orange"><p>George Orwell</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/33.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>The Lord of the Rings</p>
-                <p>J.R.R. Tolkien</p>
-
+                <span class="books_font_grey"><p>The Lord of the Rings</p></span>
+                <span class="books_font_orange"><p>J.R.R. Tolkien</p></span>
             </li>
         </ul>
 
@@ -150,30 +150,31 @@
         <ul>
             <li>
                 <a href=""><img src="img/books/1.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>Opaque Region</p> <p>Carlos Fuentes</p>
+                <span class="books_font_grey"><p>Opaque Region</p></span>
+                <span class="books_font_orange"><p>Carlos Fuentes</p></span>
             </li>
             <li>
-                <a href=""><img src="img/books/4.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>The Meandering Corpse</p> <p>Richard Prather</p>
+                <span class="books_font_grey"><a href=""><img src="img/books/4.png" alt="book" style="width: 146px; height: 227px;"></a></span>
+                <span class="books_font_orange"><p>The Meandering Corpse</p> <p>Richard Prather</p></span>
             </li>
             <li>
-                <a href=""><img src="img/books/9.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>English Detective Stories</p> <p>Patricia Craig</p>
+                <span class="books_font_grey"><a href=""><img src="img/books/9.png" alt="book" style="width: 146px; height: 227px;"></a></span>
+                <span class="books_font_orange"><p>English Detective Stories</p> <p>Patricia Craig</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/7.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>Die Like a Dog</p>
-                <p>Brett Halliday</p>
+                <span class="books_font_grey"><p>Die Like a Dog</p></span>
+                <span class="books_font_orange"><p>Brett Halliday</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/10.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>1984</p>
-                <p>George Orwell</p>
+                <span class="books_font_grey"><p></span><p>1984 </p></span>
+                <span class="books_font_orange"><p>George Orwell</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/11.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>The Lord of the Rings</p>
-                <p>J.R.R. Tolkien</p>
+                <span class="books_font_grey"><p>The Lord of the Rings</p></span>
+                <span class="books_font_orange"><p>J.R.R. Tolkien</p></span>
             </li>
         </ul>
 
@@ -182,13 +183,14 @@
         <ul>
             <li>
                 <a href=""><img src="img/books/12.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>The french lieutenents woman</p>
-                <p>J.R.R. John Fowles</p>
+                <span class="books_font_grey"><p>The french lieutenents woman</p></span>
+                <span class="books_font_orange"><p>J.R.R. John Fowles</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/13.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>Fantastic beasts</p>
-                <p>J.K. Rowling</p>            </li>
+                <span class="books_font_grey"><p>Fantastic beasts</p></span>
+                <span class="books_font_orange"><p>J.K. Rowling</p>  </span>
+            </li>
             <li>
                 <a href=""><img src="img/books/14.png" alt="book" style="width: 146px; height: 227px;"></a>
                 <p>Hollow city</p>
