--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                             <img src="img/book.png" alt="logo" style="width:45px; height:56px;">
                         </div>
                         <div class="menublock2">
-                            All about literature
+                            <span class="aboutliterature">All about literature</span>
                             <br>
-                            Bookworm
+                            <span class="bookworm">Bookworm</span>
                         </div>
                     </div>
                     <div class="block2">
@@ -86,24 +86,24 @@
 
 <div class="container">
     <div class="shopfronttext">
-        <p><span class="shopfront">Shopfront</span></p>
+        <p><span class="header">Shopfront</span></p>
     </div>
 
     <nav>
         <div class="shopfrontmenu">
             <div class="shopfrontmenuleft">
                 <ul>
-                    <li><span class="font_menu_shop"><a href="All">All</a></span></li>
-                    <li><span class="font_menu_shop"><a href="Art & Photography">Art & Photography</a></span></li>
-                    <li><span class="font_menu_shop"><a href="">Audio books</a></span></li>
-                    <li><span class="font_menu_shop"><a href="">Biography</a></span></li>
-                    <li><span class="font_menu_shop"><a href="">Business</a></span></li>
-                    <li><span class="font_menu_shop"><a href="">Children Book</a></span></li>
+                    <li><span class="font_menu_"><a href="All">All</a></span></li>
+                    <li><span class="font_menu"><a href="Art & Photography">Art & Photography</a></span></li>
+                    <li><span class="font_menu"><a href="">Audio books</a></span></li>
+                    <li><span class="font_menu"><a href="">Biography</a></span></li>
+                    <li><span class="font_menu"><a href="">Business</a></span></li>
+                    <li><span class="font_menu"><a href="">Children Book</a></span></li>
                 </ul>
             </div>
             <div class="shopfrontmenuright">
                 <ul>
-                    <li><span class="font_menu_shop"><a href="Popular">Popular</a></span></li>
+                    <li><span class="font_menu"><a href="Popular">Popular</a></span></li>
                 </ul>
             </div>
         </div>
@@ -154,12 +154,14 @@
                 <span class="books_font_orange"><p>Carlos Fuentes</p></span>
             </li>
             <li>
-                <span class="books_font_grey"><a href=""><img src="img/books/4.png" alt="book" style="width: 146px; height: 227px;"></a></span>
-                <span class="books_font_orange"><p>The Meandering Corpse</p> <p>Richard Prather</p></span>
+                <a href=""><img src="img/books/4.png" alt="book" style="width: 146px; height: 227px;"></a>
+                <span class="books_font_grey"><p>The Meandering Corpse</p> </span>
+                    <span class="books_font_orange"><p>Richard Prather</p></span>
             </li>
             <li>
-                <span class="books_font_grey"><a href=""><img src="img/books/9.png" alt="book" style="width: 146px; height: 227px;"></a></span>
-                <span class="books_font_orange"><p>English Detective Stories</p> <p>Patricia Craig</p></span>
+                <a href=""><img src="img/books/9.png" alt="book" style="width: 146px; height: 227px;"></a>
+                <span class="books_font_grey"><p>English Detective Stories</p></span>
+                    <span class="books_font_orange"><p>Patricia Craig</p></span>
             </li>
             <li>
                 <a href=""><img src="img/books/7.png" alt="book" style="width: 146px; height: 227px;"></a>
@@ -193,20 +195,24 @@
             </li>
             <li>
                 <a href=""><img src="img/books/14.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>Hollow city</p>
-                <p>Ransom Riggs</p>            </li>
+                <span class="books_font_grey"><p>Hollow city</p></span>
+                <span class="books_font_orange"><p>Ransom Riggs</p></span>
+            </li>
             <li>
                 <a href=""><img src="img/books/15.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>The collector</p>
-                <p>John Fowles</p>            </li>
+                <span class="books_font_grey"><p>The collector</p></span>
+                <span class="books_font_orange"><p>John Fowles</p></span>
+            </li>
             <li>
                 <a href=""><img src="img/books/16.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>The magus</p>
-                <p>John Fowles</p>            </li>
+                <span class="books_font_grey"><p>The magus</p></span>
+                <span class="books_font_orange"><p>John Fowles</p></span>
+            </li>
             <li>
                 <a href=""><img src="img/books/17.png" alt="book" style="width: 146px; height: 227px;"></a>
-                <p>Everything I Never Told You</p>
-                <p>Celeste Ng</p>            </li>
+                <span class="books_font_grey"><p>Everything I Never Told You</p></span>
+                <span class="books_font_orange"><p>Celeste Ng</p></span>
+            </li>
         </ul>
 
     </div>
@@ -214,16 +220,17 @@
 </div> <!-- end container -->
 
 <div class="container">
+    <div><span class="header">Popular writers</span></div>
     <nav class="menupopular">
         <ul>
-            <li><a href="">Stefen King</a>S</li>
-            <li><a href="">John Fowles</a></li>
-            <li><a href="">James Patterson</a></li>
-            <li><a href="">John Crisham</a></li>
-            <li><a href="">Danielle Stil</a></li>
-            <li><a href="">Ernest Hemingwey</a></li>
-            <li><a href="">Dan Brown</a></li>
-            <li><a href="">Rich Riordan</a></li>
+            <li><span class="font_menu"><a href="">Stefen King</a></span></li>
+            <li><span class="font_menu"><a href="">John Fowles</a></span></li>
+            <li><span class="font_menu"><a href="">James Patterson</a></span></li>
+            <li><span class="font_menu"><a href="">John Crisham</a></span></li>
+            <li><span class="font_menu"><a href="">Danielle Stil</a></span></li>
+            <li><span class="font_menu"><a href="">Ernest Hemingwey</a></span></li>
+            <li><span class="font_menu"><a href="">Dan Brown</a></span></li>
+            <li><span class="font_menu"><a href="">Rich Riordan</a></span></li>
         </ul>
 
 
