--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="shopfrontmenu">
             <div class="shopfrontmenuleft">
                 <ul>
-                    <li><span class="font_menu_"><a href="All">All</a></span></li>
+                    <li><span class="font_menu"><a href="All">All</a></span></li>
                     <li><span class="font_menu"><a href="Art & Photography">Art & Photography</a></span></li>
                     <li><span class="font_menu"><a href="">Audio books</a></span></li>
                     <li><span class="font_menu"><a href="">Biography</a></span></li>
@@ -216,7 +216,7 @@
         </ul>
 
     </div>
-    <button>All books</button>
+    <button><span class="all_books">All books</span></button>
 </div> <!-- end container -->
 
 <div class="container">
@@ -238,9 +238,9 @@
 
     <div id="literature_writes">
         <div class="comment1">
-            <div>John Fowles</div>
+            <div><span class="fontcaption">John Fowles</span></div>
             <br>
-            <div>31 March 1926 Leigh-on-Sea, Essex, England | 5*</div>
+            <div><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span> <span><span class="literature_vote">| 5*</span></span></div>
             <br>
             <div>You are right. He did not. But  millions of Germans did betray their selves.
                 That was the tragedy. Not that one man had the courage to be evil.
@@ -250,17 +250,17 @@
             <img src="img/fowles_djaongly.png" alt="fowles_djaongly" style="width: 331px; height: 497px;">
         </div>
         <div class="comment">
-            <div>About</div>
+            <div><span class="font_comment">About</span></div>
             <br>
-            <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum </p>
+            <p><span class="font_comment_text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum </span> </p>
             <br>
-            <div>Books</div>
+            <div><span class="font_comment" >Books</span></div>
             <img src="img/b1.png" alt="book" style="width: 73px; height: 114px;">
             <img src="img/b2.png" alt="book" style="width: 73px; height: 114px;">
             <img src="img/b3.png" alt="book" style="width: 73px; height: 114px;">
             <img src="img/b4.png" alt="book" style="width: 73px; height: 114px;">
             <br>
-            <div>to writer page</div>
+            <div><span class="writer_page">to writer page</span></div>
         </div>
 
     </div>
