--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
                 <div class="menu">
                     <div class="block1">
                         <div class="menublock1">
-                            <img src="img/book.png" alt="logo" style="width:45px; height:56px;">
-                        </div>
-                        <div class="menublock2">
-                            <span class="aboutliterature">All about literature</span>
-                            <br>
-                            <span class="bookworm">Bookworm</span>
+                            <img src="img/icons_svg/logo.svg" alt="logo">
                         </div>
                     </div>
                     <div class="block2">
@@ -47,6 +42,7 @@
                             <li><img src="img/Userpic.png" alt="Userpic" style="width: 39px; height: 39px;"></li>
                         </ul>
                     </div>
+
                 </div> <!-- end menu -->
 
             </nav> <!-- end nav -->
@@ -59,8 +55,8 @@
         <img src="img/bookharry.png" alt="bookharry" style="width: 496px; height: 679px; ">
     </div>
     <div class="booktext">
-        <h1><span class="font_slider_grey">Harry Potter And  <br>
-        The Sorcerer's Stone</span></h1>
+        <p><span class="font_slider_grey">Harry Potter And  <br>
+        The Sorcerer's Stone</span></p>
         <p><span class="font_slider_orange">By Joan Rowling </span>  <span class="font_slider_vote">| 5 *</span></p>
         <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
             Suspendisse nec tortor urna.
@@ -221,30 +217,29 @@
 
 <div class="container">
     <div><span class="header">Popular writers</span></div>
-    <nav class="menupopular">
-        <ul>
-            <li><span class="font_menu"><a href="">Stefen King</a></span></li>
-            <li><span class="font_menu"><a href="">John Fowles</a></span></li>
-            <li><span class="font_menu"><a href="">James Patterson</a></span></li>
-            <li><span class="font_menu"><a href="">John Crisham</a></span></li>
-            <li><span class="font_menu"><a href="">Danielle Stil</a></span></li>
-            <li><span class="font_menu"><a href="">Ernest Hemingwey</a></span></li>
-            <li><span class="font_menu"><a href="">Dan Brown</a></span></li>
-            <li><span class="font_menu"><a href="">Rich Riordan</a></span></li>
-        </ul>
+        <nav class="menupopular">
+            <ul>
+                <li><span class="font_menu"><a href="">Stefen King</a></span></li>
+                <li><span class="font_menu"><a href="">John Fowles</a></span></li>
+                <li><span class="font_menu"><a href="">James Patterson</a></span></li>
+                <li><span class="font_menu"><a href="">John Crisham</a></span></li>
+                <li><span class="font_menu"><a href="">Danielle Stil</a></span></li>
+                <li><span class="font_menu"><a href="">Ernest Hemingwey</a></span></li>
+                <li><span class="font_menu"><a href="">Dan Brown</a></span></li>
+                <li><span class="font_menu"><a href="">Rich Riordan</a></span></li>
+            </ul>
 
-
-    </nav>
+        </nav>
 
     <div id="literature_writes">
         <div class="comment1">
             <div><span class="fontcaption">John Fowles</span></div>
             <br>
-            <div><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span> <span><span class="literature_vote">| 5*</span></span></div>
+            <div><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span><span class="literature_vote">| 5*</span></span></div>
             <br>
-            <div>You are right. He did not. But  millions of Germans did betray their selves.
+            <div><span class="fontcaption_text">You are right. He did not. But  millions of Germans did betray their selves.
                 That was the tragedy. Not that one man had the courage to be evil.
-                But that milions had not the courage. </div>
+                But that milions had not the courage.</span> </div>
         </div>
         <div class="comment">
             <img src="img/fowles_djaongly.png" alt="fowles_djaongly" style="width: 331px; height: 497px;">
@@ -260,14 +255,17 @@
             <img src="img/b3.png" alt="book" style="width: 73px; height: 114px;">
             <img src="img/b4.png" alt="book" style="width: 73px; height: 114px;">
             <br>
-            <div><span class="writer_page">to writer page</span></div>
+            <div>
+                <span class="writer_page">to writer page</span>
+
+            </div>
         </div>
 
     </div>
 </div>
 
 <div class="container">
-    <h1>Literature news</h1>
+    <p><span class="header">Literature news</span></p>
  <div id="literature_news">
      <ul>
          <li><a><img src="img/111.png" alt="picture" style="width: 342px; height: 553px;"></a>
