--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <br>
             <div>
                 <span class="writer_page">to writer page</span>
-
+                <img src="img/rectangle.png" alt="rectangle">
             </div>
         </div>
 
@@ -266,7 +266,7 @@
 
 <div class="container">
     <p><span class="header">Literature news</span></p>
- <div id="literature_news">
+    <div id="literature_news">
      <ul>
          <li><a><img src="img/111.png" alt="picture" style="width: 342px; height: 553px;"></a>
              <p><span class="fontcaption">How literature can help people cope with mental health problems</p></span>
